force-app/main/default/objects/System_Related_Site__c/System_Related_Site__c.object-meta.xml
<CustomObject>
    <label>System Members</label>
    <nameField>
        <displayFormat>SRS-{000000000}</displayFormat>
        <label>System Related Site No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>