force-app/main/default/objects/System_Related_Site__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>System Members</relationshipLabel>
    <relationshipName>System_Members</relationshipName>
    <type>Lookup</type>
</CustomField>