force-app/main/default/objects/System_Related_Site__c/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <label>Date Updated</label>
    <type>DateTime</type>
</CustomField>