force-app/main/default/objects/System_Related_Site__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <formula>IF( TEXT(Type__c) = &apos;Collection Site&apos;, &apos;Collection Site&apos;, &apos;Member&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Type</label>
    <type>Text</type>
</CustomField>