force-app/main/default/objects/System_Related_Site__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>System Members</relationshipLabel>
    <relationshipName>System_Members</relationshipName>
    <type>Lookup</type>
</CustomField>