force-app/main/default/objects/System_Related_Site__c/fields/Site_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Registration_Number__c</fullName>
    <formula>Site__r.Account__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration #</label>
    <type>Text</type>
</CustomField>