force-app/main/default/objects/System_Related_Site__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <formula>Text ( Site__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Type</label>
    <type>Text</type>
</CustomField>