force-app/main/default/objects/System_Related_Site__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( ISBLANK(End_Date_Time__c) , &apos;Active&apos;, &apos;Inactive&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>