force-app/main/default/objects/System_Related_Site__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <referenceTo>System__c</referenceTo>
    <relationshipLabel>System Members</relationshipLabel>
    <relationshipName>System_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>