force-app/main/default/objects/System_Related_Site__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collection Site</fullName>
            </value>
            <value>
                <fullName>Collector</fullName>
            </value>
            <value>
                <fullName>Hauler</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Retreader</fullName>
            </value>
            <value>
                <fullName>Exempt Collection Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>